--- a/terraform/compose.yaml
+++ b/terraform/compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend:
-    image: morenodoesinfra/ecommerce-be:latest
+    image: <backend image tagged for dockerhub>:latest
     environment:
       - DB_HOST=${rds_endpoint}
     ports:
@@ -15,7 +15,7 @@ services:
                 python manage.py runserver 0.0.0.0:8000"
 
   frontend:
-    image: morenodoesinfra/ecommerce-fe:latest
+    image: <frontend image tagged for dockerhub>:latest
     ports:
       - "3000:3000"
     depends_on:
